# mediapipe

./: .bazelrc  .gitignore  README.md  WORKSPACE  explain.txt  memo.md
mediapipe/: BUILD
mediapipe/calculators/tensor/: BUILD  image_to_tflitetensor_calculator.cc
mediapipe/calculators/tflite/: BUILD  tflite_tensors_to_classification_calculator_u8.cc  tflite_tensors_to_floats_calculator_u8.cc  tflite_tensors_to_landmarks_calculator_u8.cc
mediapipe/calculators/util/: BUILD  detections_to_train_data_calculator_v1.cc
mediapipe/examples/coral/: BUILD  README.md  cross_compile_face_detection_tpu.sh  cross_compile_face_mesh_tpu.sh  cross_compile_hand_tracking_tflite.sh  cross_compile_hand_tracking_tflite_tmp.sh  cross_compile_palm_detection_tpu.sh  demo_run_graph_main.cc  demo_run_graph_main_original.cc  hello_world.cc
mediapipe/examples/desktop/: BUILD  demo_run_graph_dataset_v1.cc  demo_run_graph_main_network.cc  local_compile_hand_tracking_net.sh
mediapipe/graphs/hand_tracking/: BUILD  hand_detection_desktop_live_dataset.pbtxt  hand_tracking_desktop_dataset.pbtxt  hand_tracking_desktop_live_dataset.pbtxt  hand_tracking_tpu.pbtxt
mediapipe/modules/hand_landmark/: BUILD  hand_landmark_cpu.pbtxt  hand_landmark_model_loader.pbtxt  hand_landmark_tpu.pbtxt  hand_landmark_tracking_cpu.pbtxt  hand_landmark_tracking_tpu.pbtxt
mediapipe/modules/palm_detection/: BUILD  palm_detection_cpu.pbtxt  palm_detection_model_loader.pbtxt  palm_detection_tpu.pbtxt
nullspaces/: BUILD.bazel  hand_runner.cc
toolchain/: BUILD  cc_toolchain_config.bzl  rock_toolchain_config.bzl
(+12 files in other folders)
